<resources>
    <string name="selected_screen_configuration">normal</string>
    <string name="probujdane">Пробуждане</string>
    <string name="app_name_label">Пробуждане</string>
    <string name="app_name">Probujdane</string>
    <string name="besedi_string">Беседи</string>
    <string name="molitvi_string">Молитви</string>
    <string name="formuli_string">Формули</string>
    <string name="music_string">Музика</string>
    <string name="notifications_string">Нотификации</string>
    <string name="options_string">Настройки</string>
    <string name="options2_string">Настройки</string>
    <string name="nedelni_besedi_string">Неделни Беседи</string>
    <string name="syborni_besedi_string">Съборни Беседи</string>
    <string name="ook_besedi_string">Общ окултен клас</string>
    <string name="mok_besedi_string">Младежки окултен клас</string>
    <string name="drugi_besedi_string">Други Беседи</string>
    <string name="utrinni_slova_string">Утринни Слова</string>
    <string name="search_string">Търсене в Словото</string>
    <string name="izvynredni_besedi_string">Извънредни Беседи</string>
    <string name="klas_na_dobrodetelite_string">Клас на добродетелите</string>
    <string name="mladevki_sybori_string">Младежки събори</string>
    <string name="rilski_besedi_string">Рилски Беседи</string>
    <string name="besedi_pred_sestrite_string">Беседи пред сестрите</string>
    <string name="besedi_pred_rekyvoditelite_string">Беседи пред ръководителите</string>
    <string name="poslednoto_slovo_string">Последното слово</string>
    <string name="not_ready_string">Тази функционалност \nе в процес на разработка</string>
    <string name="no_external_storage_is_found">Проблем с паметта</string>
    <string name="no_besedi_database_found_and_read_only_external_storage">Базата данни не е намерена и паметта е достъпна само за четене</string>
    <string name="dialog_besedi_update">Базата данни не е намерена. \nДа бъде ли свалена от интернет (412 МBytes) ?</string>
    <string name="yes">Да</string>
    <string name="no">Не</string>
    <string name="download_progress_message">Сваляне на базата данни</string>
    <string name="not_enough_memeory">Няма достатъчно памет </string>
    <string name="download_title">Беседи</string>
    <string name="download_description">База данни</string>
    <string name="dont_download">Базата данни няма да бъде свалена</string>
    <string name="download_ongoing">Базата данни се сваля</string>
    <string name="unzip_ongoing">Базата данни се разархивира</string>
    <string name="download_done">Базата данни е свалена</string>
    <string name="database_ready">Базата данни е готова за ползване</string>
    <string name="besedi_list_alphabet_order">Подреди по азбучен ред</string>
    <string name="besedi_list_date_order">Подреди по дата</string>
    <string name="filter_string">Филтрирай!</string>
    <string name="list_besedi_from_years_string">От</string>
    <string name="list_besedi_to_years_string">До</string>
    <string name="not_valid_filter_years_string">Зададени са грешни години за филтриране</string>
    <string name="variant1_string">Вариант 1</string>
    <string name="variant2_string">Вариант 2</string>
    <string name="variant1_already_selected">Вариант 1 вече е избран</string>
    <string name="variant2_already_selected">Вариант 2 вече е избран</string>
    <string name="variant1_updated">Вариант 1 е избран</string>
    <string name="variant2_updated">Вариант 2 е избран</string>
    <string name="link_beinsa_bg">Линк към сайта beinsa.bg</string>
    <string name="text_size_beseda">Размер на текст</string>
    <string name="search_button_string">Търсене</string>
    <string name="search_what">Какво да се търси</string>
    <string name="search_option_every_word">Търси всяка дума</string>
    <string name="search_option_exact_phrase">Търси точна фраза</string>
    <string name="search_option_every_word_near">Търси всички думи в близост</string>
    <string name="search_option_fts">FTS търсене, както в google.com</string>
    <string name="search_option_whole_slovo">Търси в цялото слово</string>
    <string name="search_option_all_books">Търси във всички книги</string>
    <string name="search_option_all_besedi">Търси във всички беседи</string>
    <string name="search_option_one_beseda">Търси в определена беседа</string>
    <string name="search_option_molitvi">Търси в молитвите</string>
    <string name="search_option_formuli">Търси във формулите</string>
    <string name="search_option_music">Търси в музикалните текстове</string>
    <string name="search_no_results">Не е намерен нито един резултат от търсенето!</string>
    <string name="title_formuli">Формули</string>
    <string name="title_molitvi">Молитви</string>
    <string name="songs_string">Песни</string>
    <string name="song_string">Песен</string>
    <string name="panevritmia_string">Паневритмия</string>
    <string name="panevritmia_intrumental_string">Паневритмия Инструментал</string>
    <string name="instrumental_string">Инструментал</string>
    <string name="playlists_string">Плейлисти</string>
    <string name="music_listen_string">Слушай!</string>
    <string name="music_listen_vocal_string">Слушай\nВокал!</string>
    <string name="music_listen_instrumental_string">Слушай\nИнструментал!</string>
    <string name="music_download_vocal_string">Свали\nВокал!</string>
    <string name="music_download_instrumental_string">Свали\nИнструментал!</string>
    <string name="music_download_song_string">Свали\nПесента!</string>
    <string name="no_music_selected_string">Избери песен или плейлист!</string>
    <string name="music_add2playlist_string">Добави към плейлист!</string>
    <string name="music_vocal_add2playlist_string">Добави вокал към плейлист!</string>
    <string name="music_instrumental_add2playlist_string">Добави инструментал към плейлист!</string>
    <string name="music_create_playlist_string">Създай нов плейлист!</string>
    <string name="music_play_playlist_string">Слушай плейлиста!</string>
    <string name="music_add_song_to_playlist_string">Добави към\nплейлиста!</string>
    <string name="music_delete_playlist_string">Изтриий\nплейлиста!</string>
    <string name="music_remove_song_from_playlist_string">Извади от\nплейлиста!</string>
    <string name="music_playlist_rem_title_string">Избери песни да се премахнат от nплейлиста!</string>
    <string name="music_playlist_add_title_string">Избери песни да се добавят към nплейлиста!</string>
    <string name="dialog_playlist_delete">Да бъде ли изтрит плейлист</string>
    <string name="create_new_playlist_string">Избери име на новия плейлист</string>
    <string name="vocal">Вокал</string>
    <string name="instrumental">Инструментал</string>
    <string name="beseda">Беседа</string>
    <string name="molitva">Молитва</string>
    <string name="formula">Формула</string>
    <string name="beseda_local_search_button_string">Търси в тази беседа</string>
    <string name="beseda_global_search_button_string">Търси навсякъде</string>
    <string name="music_notification_channel_name">Пробуждане</string>
    <string name="music_notification_channel_description">Нотификацияи за Пробуждане</string>
    <string name="music_download_all_string">Свали всички!</string>
    <string name="music_download_string">Свали!</string>
    <string name="music_download_title_string">Пробуждане - Песен</string>
    <string name="dialog_download_songs_start">Да бъдат ли свалени от интернет всички песни (</string>
    <string name="dialog_download_songs_end"> МBytes) ?</string>
    <string name="music_delete_songs_string">Изтрий песни!</string>
    <string name="music_songs_rem_title_string">Избери музикалните файлове на кои песни да се изтрият!</string>
    <string name="music_panevritmy_playlist_string">Слушай цялата паневритмия!</string>
    <string name="music_panevritmy_instrumental_playlist_string">Слушай цялата паневритмия - инструментал!</string>
    <string name="dialog_songs_delete_start">Да бъдат ли изтрити </string>
    <string name="dialog_songs_delete_end">песни?</string>
    <string name="dialog_songs_delete_one">Да бъде ли изтрита 1 песен?</string>
    <string name="instr_vocal_string"> &lt;- Вокал </string>
    <string name="instr_instrumental_string">Инструментал -> </string>
    <string name="month_jan">Януари</string>
    <string name="month_feb">Февруари</string>
    <string name="month_mar">Март</string>
    <string name="month_apr">Април</string>
    <string name="month_may">Май</string>
    <string name="month_jun">Юни</string>
    <string name="month_jul">Юли</string>
    <string name="month_aug">Август</string>
    <string name="month_sep">Септември</string>
    <string name="month_oct">Октомври</string>
    <string name="month_nov">Ноември</string>
    <string name="month_dec">Декември</string>
    <string name="month_string">Месец</string>
    <string name="day_string">Ден</string>
    <string name="books_string">Книги</string>
    <string name="nauka_vyzpitanie_string">Науката и възпитанието</string>
    <string name="zavet_string">Завета на цветните лъчи на светлината</string>
    <string name="book_local_search_button_string">Търси в тази книга</string>
    <string name="book_global_search_button_string">Търси навсякъде</string>
    <string name="entire_book_string">Цялата книга</string>
    <string name="zaveta_cvetnite_lychi_string">Завета на цветните лъчи на светлината</string>
</resources>
