<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.grigorov.asparuh.probujdane.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/beinsadouno" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/colorMainBackground"
        android:layout_weight="24">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="5">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/besedi_string"
                android:textSize="@dimen/text_size_main_buttons"
                android:textColor="@color/colorMainText"
                android:background="@color/colorMain"
                android:onClick="startBesediMenuTask" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="5">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/molitvi_string"
                android:textSize="@dimen/text_size_main_buttons"
                android:textColor="@color/colorMainText"
                android:background="@color/colorMain"
                android:onClick="startMolitviTask" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="5">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/formuli_string"
                android:textSize="@dimen/text_size_main_buttons"
                android:textColor="@color/colorMainText"
                android:background="@color/colorMain"
                android:onClick="startFormuliTask" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="5">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/music_string"
                android:textSize="@dimen/text_size_main_buttons"
                android:textColor="@color/colorMainText"
                android:background="@color/colorMain"
                android:onClick="startMusicTask" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />


        </LinearLayout>
        <!--
            Notifications not implemented for now!
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="5">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Button
                        android:layout_weight="5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/notifications_string"
                        android:textSize="@dimen/text_size_main_buttons"
                        android:textColor="@color/colorMainText"
                        android:background="@color/colorMain"
                        android:onClick="startNotificationsTask" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />


                </LinearLayout>
                -->

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="5">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/options2_string"
                android:textSize="@dimen/text_size_main_buttons"
                android:textColor="@color/colorMainText"
                android:background="@color/colorMain"
                android:onClick="startOptionsMenuTask" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/options_2"
                android:onClick="startOptionsMenuTask" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="5">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/search_string"
                android:textSize="@dimen/text_size_main_buttons"
                android:textColor="@color/colorMainText"
                android:background="@color/colorMain"
                android:onClick="startSearchMenuTask" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/len_2"
                android:onClick="startSearchMenuTask" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />

    </LinearLayout>

</LinearLayout>
